--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -4,6 +4,12 @@ body, html {
   height: 100%;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* <-- This horizontally centers children */
+  padding-top: 2rem;
+}
 
 .game {
   display: flex;
