--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -2,19 +2,19 @@ body, html {
   height: 100%;
 }
 
-/* This becomes the main container that centers everything */
-.page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;  /* vertically center */
-  align-items: center;      /* horizontally center */
-  min-height: 100vh;        /* full screen */
-  background-color: #222;   /* optional: dark background */
-  color: white;
-  width: 150%;
-  margin-left: 100px;
-  margin-right: 100px;
-}
+@media (max-width:1000px) and (min-width:700px) {
+    .page {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;  /* vertically center */
+        align-items: center;      /* horizontally center */
+        min-height: 100vh;        /* full screen */
+        background-color: #222;   /* optional: dark background */
+        color: white;
+        width: 150%;
+        margin-left: calc(15px + (100vw - 700px) * (15 - 30) / (700 -  1000));
+    }
+};
 
 /* This just stacks board + controls inside the center */
 .game {
