--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -16,9 +16,21 @@ body, html {
   box-sizing: border-box;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 600px) {
+  .page {
+    padding: 1rem;
+  }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 1000px) {
   .page {
     padding: 10rem;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 2000px) {
+  .page {
+    padding: 20rem;
   }
 }
 
